2019-1/231/users/4227/executions/1651_1054.log
== TEST (2019-04-06 10:27:26) 
-- CODE:
x= int(input(""))
y= int(input(""))

if ( 2x+y = 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- ERROR:
File "XXXX", line 4
    if ( 2x+y = 3):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 10:27:32) 
-- CODE:
x= int(input(""))
y= int(input(""))

if ( 2x+y == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- ERROR:
File "XXXX", line 4
    if ( 2x+y == 3):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 10:27:46) 
-- CODE:
x= int(input(""))
y= int(input(""))

if (2x+y= 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- ERROR:
File "XXXX", line 4
    if (2x+y= 3):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 10:28:00) 
-- CODE:
x= int(input(""))
y= int(input(""))

if ( 2*x+y= 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- ERROR:
File "XXXX", line 4
    if ( 2*x+y= 3):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 10:28:13) 
-- CODE:
x= int(input(""))
y= int(input(""))

if ( (2*x)+ y = 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- ERROR:
File "XXXX", line 4
    if ( (2*x)+ y = 3):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 10:28:57) 
-- CODE:
x= int(input(""))
y= int(input(""))

if((2*x)+y = 3 )
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- ERROR:
File "XXXX", line 4
    if((2*x)+y = 3 )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 10:29:07) 
-- CODE:
x= int(input(""))
y= int(input(""))

if(((2*x)+y) = 3 )
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- ERROR:
File "XXXX", line 4
    if(((2*x)+y) = 3 )
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 10:29:58) 
-- CODE:
x = int(input(""))
y = int(input(""))

if ((2*x)+y = 3)
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- ERROR:
File "XXXX", line 4
    if ((2*x)+y = 3)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 10:30:25) 
-- CODE:
x = int(input(""))
y = int(input(""))

if ((2*x)+y == 3)
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- ERROR:
File "XXXX", line 4
    if ((2*x)+y == 3)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 10:30:42) 
-- CODE:
x = int(input(""))
y = int(input(""))

if ((2*x)+y==3)
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- ERROR:
File "XXXX", line 4
    if ((2*x)+y==3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 10:31:00) 
-- CODE:
x = int(input(""))
y = int(input(""))

if ((2*x) + y == 3)
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- ERROR:
File "XXXX", line 4
    if ((2*x) + y == 3)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 10:31:07) 
-- CODE:
x = int(input(""))
y = int(input(""))

if ((2 * x) + y == 3)
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- ERROR:
File "XXXX", line 4
    if ((2 * x) + y == 3)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 10:31:25) 
-- CODE:
x = int(input(""))
y = int(input(""))

if ((2 * x) + y == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 10:31:37) 
-- CODE:
x = int(input(""))
y = int(input(""))

if ((2 * x) + y == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- EXECUTION TIME:
0.275483
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 14:00:12) 
-- CODE:
x = int(input(""))
y = int(input(""))

if ((2 * x) + y == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- EXECUTION TIME:
0.124538
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:13:41) 
-- CODE:
x = int(input(""))
y = int(input(""))

if ((2 * x) + y == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
